API spec changes in gRPC and HTTP
