# go-routesapi/models/model_destination_sandbox.go
@@ -1,0 +1,156 @@
+/*
+Signadot Routes API
+
+The Signadot Routes API provides access to routing rules pertinent to Signadot Sandboxes on a cluster with the Signadot Operator (>= v0.14.2) installed. 
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package models
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+// checks if the DestinationSandbox type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &DestinationSandbox{}
+
+// DestinationSandbox A DestinationSandbox represents a sandbox that implements routes
+type DestinationSandbox struct {
+	// The sandbox name
+	Name string `json:"name"`
+}
+
+type _DestinationSandbox DestinationSandbox
+
+// NewDestinationSandbox instantiates a new DestinationSandbox object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewDestinationSandbox(name string) *DestinationSandbox {
+	this := DestinationSandbox{}
+	this.Name = name
+	return &this
+}
+
+// NewDestinationSandboxWithDefaults instantiates a new DestinationSandbox object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewDestinationSandboxWithDefaults() *DestinationSandbox {
+	this := DestinationSandbox{}
+	return &this
+}
+
+// GetName returns the Name field value
+func (o *DestinationSandbox) GetName() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Name
+}
+
+// GetNameOk returns a tuple with the Name field value
+// and a boolean to check if the value has been set.
+func (o *DestinationSandbox) GetNameOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Name, true
+}
+
+// SetName sets field value
+func (o *DestinationSandbox) SetName(v string) {
+	o.Name = v
+}
+
+func (o DestinationSandbox) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o DestinationSandbox) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["name"] = o.Name
+	return toSerialize, nil
+}
+
+func (o *DestinationSandbox) UnmarshalJSON(bytes []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"name",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(bytes, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varDestinationSandbox := _DestinationSandbox{}
+
+	err = json.Unmarshal(bytes, &varDestinationSandbox)
+
+	if err != nil {
+		return err
+	}
+
+	*o = DestinationSandbox(varDestinationSandbox)
+
+	return err
+}
+
+type NullableDestinationSandbox struct {
+	value *DestinationSandbox
+	isSet bool
+}
+
+func (v NullableDestinationSandbox) Get() *DestinationSandbox {
+	return v.value
+}
+
+func (v *NullableDestinationSandbox) Set(val *DestinationSandbox) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableDestinationSandbox) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableDestinationSandbox) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableDestinationSandbox(val *DestinationSandbox) *NullableDestinationSandbox {
+	return &NullableDestinationSandbox{value: val, isSet: true}
+}
+
+func (v NullableDestinationSandbox) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableDestinationSandbox) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
